<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="600dp"
    android:background="@drawable/md_transparent"
    android:foreground="@mipmap/print_success_icon"
    android:foregroundGravity="top|center_horizontal"
    android:id="@+id/fl_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        app:cardBackgroundColor="@color/gray_f1"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_dialog_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="@color/red_ac1"
                android:text="@string/ticket_print_fail_msg"
                android:layout_marginTop="100dp"/>
            
            
            <View
                android:id="@+id/v_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_below="@id/tv_dialog_content"
                android:layout_marginTop="100dp"
                android:background="@color/gray_cc"/>
            
            <TextView
                android:id="@+id/tv_dialog_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="30dp"
                android:lineSpacingExtra="5dp"
                android:textSize="18sp"
                android:textColor="@color/gray_66"
                android:layout_below="@+id/v_line"
                android:text="@string/ticket_print_fail_remark"
                />

            
            <Button
                android:id="@+id/btn_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textSize="18sp"
                android:textColor="@color/red_fa8"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_dialog_remark"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/ticket_back_home"/>

            <View
                style="@style/line_horizontal"
                android:layout_below="@+id/btn_option"
                android:layout_alignLeft="@id/btn_option"
                android:layout_alignRight="@+id/btn_option"
                android:layout_marginBottom="30dp"
                android:background="@color/red_fa8"/>
            
        </RelativeLayout>


    </android.support.v7.widget.CardView>


</FrameLayout>
